--- a/src/calc.css
+++ b/src/calc.css
@@ -1,16 +1,16 @@
 .calc {
-	text-align: center;
 	display: inline-block;
 	margin: 20px auto 0;
 	padding: 10px 20px 20px;
+	text-align: center;
 	background: linear-gradient(to bottom, rgba(245,246,246,1) 0%,
 		rgba(219,220,226,1) 21%,
 		rgba(184,186,198,1) 49%,
 		rgba(221,223,227,1) 80%,
 		rgba(245,246,246,1) 100%); 
+	user-select: none;
 	border-radius: 10px;
 	border: 1px solid #ddd;
-	user-select: none;
 	box-shadow: 3px 3px 5px rgba(0,0,0,0.5);
 }
 .calcButton {
@@ -18,9 +18,11 @@
 	justify-content: center;
 }
 .digits {
+	width: 150px;
 	box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 }
 .operators {
+	width: 100px;
 	margin-left: 20px;
 	box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 }
